# dreifacher-questpresso

./: .gitignore  Cargo.toml  README.md  TODO.md  donut-the-cat.wasm  flake.nix  index.html  macroquad-template.wasm
.github/workflows/: deploy.yaml
assets/: mystery_encounter.aseprite
assets/backgrounds/: map-bg.aseprite
assets/event/: campfire.json  dragon.json  enemy.json  enemy1.json  enemy2.json  enemy3.json  exit.json  shop.json  welcome.json  zombie.json  zombies.json
assets/icon/: mystery.aseprite
assets/layout/: level-1.json
src/: colors.rs  dialog.rs  draw.rs  event.rs  main.rs  map.rs  player.rs
src/action/: mod.rs  return_map.rs
src/entity/: attack.rs  enemy.rs  mod.rs  player.rs  stat.rs
src/map/: icon.rs  map.rs  mod.rs  room.rs
src/scene/: combat_scene.rs  dialog_scene.rs  game_over_scene.rs  map_scene.rs  mod.rs
