[package]
name = "macroquad-template"
version = "0.1.0"
edition = "2024"
description = "macroquad template for our gamejam's"
repository = "https://github.com/Geldwaschbär/raylib-wasm-template.git"
license = "MIT"

[dependencies]
macroquad = "0.4.14"
rand = "0.10.0"
serde = { version = "1.0.228", features = [ "serde_derive" ] }
serde_json = "1.0.149"
