[package]
name = "donut-the-cat"
version = "0.1.0"
edition = "2024"
description = "Donut the Cat is a roguelike text adventure for the Dreifacher Questpresso."
repository = "https://github.com/Geldwaschbär/donut-the-cat.git"
license = "MIT"

[dependencies]
async_from = "0.2.0"
macroquad = "0.4.14"
serde = { version = "1.0.228", features = [ "serde_derive" ] }
serde_json = "1.0.149"
